<resources>
    <string name="app_name">QuizApp</string>
    <string name="question">What is the name of this champion?</string>
    <string name="lissandra">Lissandra</string>
    <string name="Zed">Zed</string>
    <string name="zyra">Zyra</string>
    <string name="rengar">Rengar</string>
    <string name="Ammumu">Ammumu</string>
    <string name="caitlin">Caitlin</string>
    <string name="Diana">Diana</string>
    <string name="katarina">Katarina</string>
    <string name="ekko">Ekko</string>
    <string name="finish_text">Well done you gained: points </string>
    <string name="text_top">Good Job!</string>
    <string name="champions">Champions</string>
    <string name="Items">items</string>
    <string name="Spells">spells</string>
    <string name="check_scores">Check Scores</string>
    <string name="put_your_name_here">Write your name</string>
    <string name="put_your_here">Write your name</string>
    <string name="do_you_want_more">Do you want more?</string>
    <string name="send_feedback">Send Feedback!</string>
    <string name="___">_________________</string>
    <string name="_">___________</string>
    <string name="check_score">Check Scores</string>
    <string name="leave_feedback_here">Leave Feedback here!</string>
    <string name="do_you_want_moe">Do you want more?</string>
    <string name="good_job">Good Job</string>
    <string name="try_again">try again</string>
    <string name="go_main">Main Page</string>
    <string name="Vayne">Vayne</string>
    <string name="graves">Graves</string>
    <string name="Jhin">Jhin</string>
    <string name="Katarina">Katarina</string>
    <string name="Lux">Lux</string>
    <string name="whats_the_name_of_the_champion">What is the name of the champion?</string>
    <string name="Darius">Darius</string>
    <string name="Rengar">Rengar</string>
    <string name="Ezreal">Ezreal</string>
    <string name="Yasuo">Yasuo</string>
    <string name="Yorick">Yorick</string>
    <string name="Ahri">Ahri</string>
    <string name="Zyra">Zyra</string>
    <string name="Tristana">Tristana</string>
    <string name="Cassiopeia">Cassiopeia</string>
    <string name="Camille">Camille</string>
    <string name="Aurelion_Sol">Aurelion Sol</string>
    <string name="Ashe">Ashe</string>
    <string name="Caitlyn">Caitlyn</string>
    <string name="Akali">Akali</string>
    <string name="Malphite">Malphite</string>
    <string name="Kog_Maw">Kog Maw</string>
    <string name="Nautilus">Nautilus</string>
    <string name="Kled">Kled</string>
    <string name="Galio">Galio</string>
    <string name="Mordekaiser">Mordekaiser</string>
    <string name="Olaf">Olaf</string>
    <string name="Nasus">Nasus</string>
    <string name="Talon">Talon</string>
    <string name="Jarvan_IV">Jarvan IV</string>
    <string name="Xin_Zao">Xin Zao</string>
    <string name="Annie">Annie</string>



</resources>
