<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_scene_four"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/rengar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="@dimen/textQuestionSize" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/asnwer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ammumu" />

            <RadioButton
                android:id="@+id/asnwer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jhin" />

            <RadioButton
                android:id="@+id/asnwer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/rengar" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="goToNext"
                android:text=">" />

        </RadioGroup>
    </LinearLayout>
</LinearLayout>