<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/lissandra" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="@dimen/textQuestionSize" />

        <RadioGroup
            android:id="@+id/radioButtonID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/asnwer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="answerButtonClick"
                android:text="@string/lissandra" />

            <RadioButton
                android:id="@+id/asnwer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="answerButtonClick"
                android:text="@string/zed" />

            <RadioButton
                android:id="@+id/asnwer3"
                android:layout_width="wrap_content"
                android:onClick="answerButtonClick"
                android:layout_height="wrap_content"
                android:text="@string/zyra" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="checkTheAnswer"
                android:layout_weight="1"
                android:text="Check" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="goToNext"
                android:layout_weight="1"
                android:text="Next" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>